segundo commit en rama correcta

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Actividad 2</title>
 </head>
 <body>
-    <h2>Actividad 2 de la evidencia</h2>
+    <h2>Actividad 2 de la evidencia en rama mejoraAdaya</h2>
     <p></p>
     <img src="img/perrito.jpg" alt="">
 </body>
